# face_rendering

./: README.md
exe/: face_rendering.rar  imgui.ini
src/: CMakeLists.txt  depvars.h
src/includes/: Texture.h  extenso.h  fcalc3d.h  imgui_impl_opengl3.cpp
src/includes/ind/: bounds.cc  bounds.h  loaders.cc  loaders.h  renderer.cc  renderer.h  shader.cc  shader.h  utils.cc  utils.h  view.cc  view.h  window.cc  window.h
src/includes/ind/effects/: congo.cc  congo.h
src/renderer_hm/: CMakeLists.txt  face.cc  face.h  main.cc
src/shaders/: render_hm.frag  render_hm.vs
